[tool.poetry]
name = "pay-flow"
version = "0.1.0"
description = ""
authors = ["Nikita <nikitaivanov2341@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.4"
sqlalchemy = "^2.0.38"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
